--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "css-loader": "^6.7.3",
     "eslint": "^8.36.0",
     "html-webpack-plugin": "^5.5.0",
-    "sass": "^1.59.3",
-    "sass-loader": "^13.2.0",
+    "sass": "^1.81.0",
+    "sass-loader": "^16.0.3",
     "style-loader": "^3.3.2",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.2",
@@ -34,5 +34,11 @@
     "webpack": "^5.76.2",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.12.0"
+  },
+  "dependencies": {
+    "@types/three": "^0.170.0",
+    "animejs": "^3.2.2",
+    "three": "^0.137.5",
+    "threeasy": "^0.1.13"
   }
 }
