--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,11 @@
 {
-    "compilerOptions": {
-      "module": "commonjs",
-      "target": "es5",
-      "sourceMap": true,
-      "resolveJsonModule": true,
-      "esModuleInterop": true
-    },
-    "exclude": [
-      "node_modules"
-    ]
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "esnext",
+    "sourceMap": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "lib": ["dom", "webworker", "es2020"]
+  },
+  "exclude": ["node_modules"]
 }
